--- a/src/main/webapp/css/art-home.css
+++ b/src/main/webapp/css/art-home.css
@@ -1,261 +1,11 @@
-/***************************************************************************************************/
-/******************************* Search Form Frame *************************************************/
-/***************************************************************************************************/
-#search_form_frame{
-	border-style:solid;
-	border-width:1px;
-	border-radius:1px;
-	border-color:rgba(0, 0, 0, 0.1);
-	padding:8px;
+.body{
+    background-color: burlywood;
 }
 
-#search_form_table{
-	text-align:center;
-	width:100%;
+#advertize{
+    background-color: burlywood;
+    height: 3em;
+    margin-bottom: 1em;
+    text-align: center;
 }
 
-#search_form_table tr td:nth-child(1){
-	width:40%;
-	padding:4px;
-}
-
-#search_form_table tr td:nth-child(2){
-	width:60%;
-	padding:4px;
-}
-
-.search_form_label{
-	float:right;
-}
-
-.search_form_input{
-	float:left;
-	width:250px;
-}
-
-.search_form_help{
-	float:right;
-}
-
-#s2id_input_course_teacher, #s2id_input_course_career, #s2id_input_course_lang{
-	width:256px;
-	display: block;
-	float:left;
-}
-
-.select2-container .select2-choice span {
-	width:200px;
-}
-
-			
-.ui-icon-delete{
-    display: block;
-	position: relative;
-	top: 6px;
-	left:237px;
-	width: 12px;
-	height: 12px;
-	font-size: 1px;
-	background: url('../images/select2.png') right top no-repeat;
-	cursor: pointer;
-	text-decoration: none;
-	border: 0;
-	outline: 0;
-}
-		
-		
-		
-
-
-#search_form_button_container{
-	margin-top:10px;
-	float:left;
-}
-#search_form_button{
-	height:23px;
-	width:90px;
-	font-size: 1em;
-	padding: 1px;
-}
-
-#search_form_button span{
-	padding: 2px;
-} 
-
-
-/***************************************************************************************************/
-/******************************* Search Result Frame ***********************************************/
-/***************************************************************************************************/
-/**override Datatables Plugin CSS**/
-.DataTables_sort_icon {
-    float: right;
-}
-
-#search_result_frame{
-	border-style:solid;
-	border-width:1px;
-	border-radius:1px;
-	border-color:rgba(0, 0, 0, 0.1);
-	padding:8px;
-	margin-top:10px;
-}
-
-#search_result_table{
-	width:100% !important;
-	border-collapse:collapse;
-}
-
-#search_result_table tr
-{ 
-	border:1px;
-}
-
-#search_result_table thead tr th:nth-child(1), #search_result_table tr td:nth-child(1)
-{ 
-	width:150px !important;
-	min-width:150px !important;
-}
-
-#search_result_table tr td
-{ 
-	padding-left:10px;
-}
-
-#search_result_table thead tr th:nth-child(2), #search_result_table tr td:nth-child(2)
-{ 	
-	width: 100%;
-	min-width: 100%;
-}
-
-
-
-#search_result_table tr.even{
- 	background-color: #F5F0F2;}
- 
- #search_result_table tr:hover{ 
-	background-color:#9C9195;
-	color:white;
-	cursor:pointer;
-}
-
-.icon-loader {
-	background-image: url(../images/ajax-loader.gif);
-	width: 16px !important;
-	height: 11px;
-	margin-left: 10px;
-	display: inline-block;
-}
-
-#loader-container{
-	background-position: 0 0;
-	width: 100% !important;
-	height: 11px;
-	margin-left: 10px;
-}
-
-/***************************************************************************************************/
-/******************************* Course details page ***********************************************/
-/***************************************************************************************************/
-#courseView .content {
-	margin-top: 10px;
-	padding: 8px;
-    border-color: rgba(0, 0, 0, 0.1);
-    border-radius: 1px 1px 1px 1px;
-    border-style: solid;
-    border-width: 1px;
-}
-#courseView td,
-#courseView th  {
-	padding-right: 20px;
-}
-#heading {
-	color: #555555;
-	text-align:center;
-}
-
-#course_outline_table {
-	width: 500px;
-	margin-left:auto; 
-    margin-right:auto;
-	border:1px solid rgba(0, 0, 0, .1);
-	border-collapse:collapse;
-}
-
-#course_outline_table  tr:not([role="columnheader"]):hover{
-	background-color:#9C9195;
-	color:white;
-	cursor:pointer;
-}
-
-#course_outline_table  tr:hover > .pdf_icon_col {
-	opacity:1;
-}
-
-#course_outlines h2 , #course_description_div h2 {
-	width: 100%;
-	text-align:center;
-}
-
-#course_outline_table td {
-	padding-left: 10px;
-}
-
-#course_outline_table .pdf_icon_col {
-	padding-right: 0;
-	width: 20px;
-	opacity:0.5;
-}
-
-#department, #header_department {
-	width:30%;
-	text-align:left;
-	padding-left: 10px;
-}
-
-#career, #header_career {
-	width:30%;
-	text-align:left;
-	padding-left: 10px;
-}
-
-#credits, #header_credits {
-	width:10%;
-	text-align:left;
-	padding-left: 10px;
-}
-
-#requirements, #header_requirements{
-	width:30%;
-	text-align:left;
-	padding-left: 10px;
-}
-
-#course_details_table {
-	margin-top: 1em;
-	border-collapse: collapse;
-	border:1px solid rgba(0, 0, 0, .1);
-	border-collapse:collapse;
-	width:100%
-}
-
-.selectedInstructor {
-	background-color:#9C9195;
-	color:white;
-}
-
-
-.right {
-	text-align: right;
-}
-
-/**************************************
- *******  Ajax Failure error div ******
- **************************************/
-#error {
-	color: red  !important;
-	padding: 3em;
-	text-align: center;
-	
-	position: relative;
-	top: 200px;
-}
