--- a/src/main/webapp/css/art-home.css
+++ b/src/main/webapp/css/art-home.css
@@ -1,11 +1,24 @@
+body{
+    background-image: url('/Users/macecyri/Dropbox/Photos/Canada/divers/DSCF0320.jpg');
+}
+
 .body{
-    background-color: burlywood;
+    background-color:rgb(215, 223, 24);
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 #advertize{
-    background-color: burlywood;
     height: 3em;
     margin-bottom: 1em;
+    margin-top: 1em;
     text-align: center;
 }
 
+/*
+ * Row highlighting example
+ */
+#search_result_table tr:hover, #search_result_table tr:hover td {
+    background-color: #ABB1DB;
+    cursor: pointer;
+}
